--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div id="wufoo-q7x2x3">
+Fill out my <a href="http://studentcarta.wufoo.com/forms/q7x2x3">online form</a>.
+</div>
+<script type="text/javascript">var q7x2x3;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'studentcarta', 
+'formHash':'q7x2x3', 
+'autoResize':true,
+'height':'260',
+'async':true,
+'header':'show', 
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { q7x2x3 = new WufooForm();q7x2x3.initialize(options);q7x2x3.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
