--- a/app/views/hooks/receiver.html.erb
+++ b/app/views/hooks/receiver.html.erb
@@ -1,4 +1,6 @@
 <h1> Contents </h1>
-<%= @merge_id %>
-<%= @file_name %>
-<%= @file %>
+<%= @pdf.merge_id %>
+<%= @pdf.file_name %>
+<%= @pdf.file %>
+
+
